# test_tt

./: .dockerignore  Makefile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 0d1ca5a13408_initial.py
services/core/: Dockerfile.core  main.py
services/core/db/: db_conf.py
services/core/helpers/: group.py
services/core/models/: mixins.py  models.py
services/core/routers/: router.py
services/core/schemas/: schemas.py
services/core/worker/: worker.py
services/landings/: Dockerfile.landings  main.py
services/landings/helper/: prepare_lead.py
services/landings/middleware/: token_middleware.py
services/landings/routers/: lead_router.py
services/landings/schemas/: lead.py
shared/jwt_handler/: handler.py
shared/middleware/: token_middleware.py
shared/redis_client/: client.py
shared/settings/: jwt.py  postgres.py  redis.py  settings.py
